// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomeScreen should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <Flex
        align="start"
        justify="center"
        style={
          Object {
            "paddingLeft": 5,
          }
        }
        value={1}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <Button
            onPress={[Function]}
            testID="IconButton"
            type="transparent"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      undefined,
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </Button>
        </View>
      </Flex>
      <Flex
        align="end"
        justify="center"
        style={
          Object {
            "paddingRight": 5,
          }
        }
        value={1}
      />
    </View>
  </RCTSafeAreaView>
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "paddingHorizontal": 60,
      }
    }
    value={1}
  >
    <Flex
      align="start"
      justify="center"
      value={3}
    >
      <Text
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "AmaticSC-Bold",
            "fontSize": 48,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 2,
            "lineHeight": 48,
            "textAlignVertical": "center",
            "textTransform": "lowercase",
          }
        }
      >
        welcome!
      </Text>
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "300",
            "lineHeight": 30,
            "paddingVertical": 10,
            "textAlign": "left",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Growing closer to God involves helping others experience Him. MissionHub joins you in that journey by suggesting steps of faith to take with others.
      </Text>
    </Flex>
    <BottomButton
      onPress={[Function]}
      testID="get-started"
      text="Continue"
    />
  </Flex>
</View>
`;

exports[`WelcomeScreen should render correctly with sign in button 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <Flex
        align="start"
        justify="center"
        style={
          Object {
            "paddingLeft": 5,
          }
        }
        value={1}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <Button
            onPress={[Function]}
            testID="IconButton"
            type="transparent"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      undefined,
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </Button>
        </View>
      </Flex>
      <Flex
        align="end"
        justify="center"
        style={
          Object {
            "paddingRight": 5,
          }
        }
        value={1}
      />
    </View>
  </RCTSafeAreaView>
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "paddingHorizontal": 60,
      }
    }
    value={1}
  >
    <Flex
      align="start"
      justify="center"
      value={3}
    >
      <Text
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "AmaticSC-Bold",
            "fontSize": 48,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 2,
            "lineHeight": 48,
            "textAlignVertical": "center",
            "textTransform": "lowercase",
          }
        }
      >
        welcome!
      </Text>
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "300",
            "lineHeight": 30,
            "paddingVertical": 10,
            "textAlign": "left",
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Growing closer to God involves helping others experience Him. MissionHub joins you in that journey by suggesting steps of faith to take with others.
      </Text>
    </Flex>
    <Flex
      align="center"
      justify="start"
      value={1}
    >
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 1.5,
            "lineHeight": 18,
            "paddingTop": 2,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "#3CC8E6",
            "height": 48,
            "margin": 8,
            "width": 670,
          }
        }
        testID="sign-in"
        text="SIGN IN"
      />
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 1.5,
            "lineHeight": 18,
            "paddingTop": 2,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#3CC8E6",
            "borderWidth": 1,
            "height": 48,
            "margin": 8,
            "width": 670,
          }
        }
        testID="get-started-sign-in-variant"
        text="GET STARTED"
      />
    </Flex>
  </Flex>
</View>
`;
